--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -15,6 +15,11 @@
     position: absolute;
     bottom: 20px;
     display: flex;
+    align-items: center;
     justify-content: center;
     width: 100%;
+}
+
+.lang {
+    margin: 0 10px;
 }
